fix curtain/menu overlap issue

--- a/_includes/home.css
+++ b/_includes/home.css
@@ -13,7 +13,7 @@
 	background: url('/assets/theme/curtain_top.png') repeat-x scroll 0 0;
 	margin-top: -20px;
 	position: relative;
-	z-index: -1;
+	z-index: -5;
 }
 .home #page-content {
 	min-height: 550px;
